panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__preprocessor__test_error_undef_with_extraneous_tokens.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/preprocessor/test_error_undef_with_extraneous_tokens.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: extraneous tokens in `#undef` directive
   ╭─[panko/tests/cases/preprocessor/test_error_undef_with_extraneous_tokens.c:1:1]
   │
 1 │ #undef abc d(e + 42)
   │ ────── ─── ────┬────  
   │                ╰────── help: remove this
───╯
